--- a/project/button/Makefile
+++ b/project/button/Makefile
@@ -11,12 +11,27 @@ AS              = msp430-elf-as
 all: button.elf 
 
 #additional rules for files
-button.elf: ${COMMON_OBJECTS} p1_interrupt_handler.o led.o switches.o buttonMain.o ../../demos/lib/libTimer.a
+button.elf: ${COMMON_OBJECTS} p1_interrupt_handler.o led.o switches.o buttonMain.o buzzer.o wdInterruptHandler.o stateMachines.o assemblyFunction.o ../../demos/lib/libTimer.a
 	${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^
 
 load: button.elf
 	msp430loader.sh button.elf
 
 clean:
-	rm -f *.o *.elf
+	rm -f *.o *.elf *~ *#
 
+buttonMain.o: buttonMain.c
+
+led.o: led.c led.h
+
+buzzer.o: buzzer.c buzzer.h
+
+switches.o: switches.c switches.h
+
+stateMachines.o: stateMachines.c stateMachines.h
+
+p1_interrupt_handler.o: p1_interrupt_handler.c
+
+wdInterruptHandler.o: wdInterruptHandler.c buzzer.h led.h switches.h stateMachines.h
+
+assemblyFunction.o: stateMachines.h
